--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,41 @@
 body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
+  font-weight: bold;
 }
 
 h2 {
-  font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
   line-height: 1.5;
   font-weight: 800;
 }
 
 h3 {
-  font-family: 'Montserrat',sans-serif;
   font-size: 1.5rem;
   font-weight: 800;
 }
 
 p {
   color: #8F8F8F;
+}
+
+/* Headings */
+
+.big-heading {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
+  text-align: left;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5rem;
 }
 
 .container-fluid {
@@ -65,6 +77,10 @@ p {
 
 /* Download Button */
 
+.row-col {
+  text-align: left;
+}
+
 .download-button {
   margin: 5% 3% 5% 0;
 }
@@ -85,9 +101,6 @@ p {
   background-color: #FFF;
   position: relative;
 }
-.features {
-  text-align: center;
-}
 
 .features-h3 {
   font-size: 1.75rem;
@@ -95,7 +108,7 @@ p {
 
 .feature-icon {
   color: #EF8172;
-  margin-bottom: 1.5rem;
+  margin: 0.7rem 0 1.5rem;
 }
 
 .feature-icon:hover {
@@ -105,7 +118,6 @@ p {
 /* Testimonials Section */
 
 #testimonials {
-  text-align: center;
   background-color: #EF8172;
   color: #FFF;
 }
@@ -121,7 +133,7 @@ p {
 }
 
 .testimonial-text {
-  font-size: 2rem;
+  font-size: 2.5rem;
   line-height: 1.5;
   font-weight: bold;
   color: #1f1f1f;
@@ -131,7 +143,8 @@ p {
 
 #press {
   background-color: #EF8172;
-  text-align: center;
+  z-index: -1;
+  margin-top: -2px;
 }
 
 .press-logo {
@@ -142,8 +155,11 @@ p {
 /* Pricing Section */
 
 #pricing {
-  text-align: center;
   padding: 5% 0;
+}
+
+.price-text {
+  font-size: 3rem;
 }
 
 .btn-sign-up:hover {
@@ -160,11 +176,17 @@ p {
 
 .card-header {
   padding-top: 18px;
+  background-color: #f1f2f4;
+}
+
+.pricing-h2 {
+  margin-bottom: 30px;
+  line-height: 1.5;
 }
 
 @media (max-width: 991.5px) {
 
-  #title {
+  .big-heading, .row-col {
     text-align: center;
   }
 
@@ -179,14 +201,18 @@ p {
     width: 70%;
     padding: 10px 0;
   }
+
+  .nav-link {
+    font-size: 1.5rem;
+  }
 }
 
 /* CTA Section */
 
 #cta {
   background-color: #ff4c68;
-  text-align: center;
-
+  position: absolute;
+  width: 100%;
 }
 
 .cta-container {
@@ -206,10 +232,17 @@ p {
 
 #footer {
   background-color: #fff;
-  text-align: center;
-  padding: 5% 0 5%;
+  padding: 570px 0 20px 0;
 }
 
 .footer-icon {
   margin: 1% 1% 2%;
+  padding: 0 2px;
+}
+
+.footer-icon:hover {
+  padding: 0 2px;
+  border-radius: 10%;
+  background-color: black;
+  color: white;
 }
